--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,10 @@
 main: pb.ajneb97.PaintballBattle
-version: 1.11.3
+version: 1.12.3
 name: PaintballBattle
 api-version: 1.13
 author: Ajneb97
-softdepend: [Multiverse-Core, HolographicDisplays, Vault, PlaceholderAPI]
+softdepend: [Multiverse-Core, HolographicDisplays, Vault, PlaceholderAPI, DecentHolograms]
+// TODO: Remove Holographic displays
 
 commands:
   paintball:
